imgs path updates

--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -20,23 +20,23 @@
               <button type="button" class="project-btn">See project</button>
             </div>
             <div class="project-img-wrapper">
-              <img
-                class="project-img"
-                src="../img/projects/mobile/read-journey-mb-1x.jpg"
-                srcset="
-                  ../img/projects/mobile/read-journey-mb-1x.jpg   375w,
-                  ../img/projects/mobile/read-journey-mb@2x.jpg   750w,
-                  ../img/projects/tablet/read-journey-tt-1x.jpg   768w,
-                  ../img/projects/tablet/read-journey-tt@2x.jpg  1536w,
-                  ../img/projects/desktop/read-journey-dt-1x.jpg 1280w,
-                  ../img/projects/desktop/read-journey-dt@2x.jpg 1440w
-                "
-                sizes="(max-width: 375px) 100vw,
-                       (max-width: 768px) 100vw,
-                       (max-width: 1440px) 50vw,
-                       33vw"
-                alt="Read journey project"
-              />
+              <picture>
+                <source media="(min-width: 1440px)" srcset="
+                  ../img/projects/desktop/read-journey-dt-1x.jpg 1440w,
+                  ../img/projects/desktop/read-journey-dt@2x.jpg 2880w">
+  
+                <source media="(min-width: 768px)" srcset="
+                  ../img/projects/tablet/read-journey-tt-1x.jpg 768w,
+                  ../img/projects/tablet/read-journey-tt@2x.jpg 1536w">
+                
+                <source media="(max-width: 767px)" srcset="
+                  ../img/projects/mobile/read-journey-mb-1x.jpg 375w,
+                  ../img/projects/mobile/read-journey-mb@2x.jpg 750w">
+              
+                <img class="project-img"
+                     src="../img/projects/mobile/read-journey-mb-1x.jpg"
+                     alt="Read journey project">
+              </picture>
             </div>
           </div>
         </div>
@@ -56,23 +56,23 @@
               <button type="button" class="project-btn">See project</button>
             </div>
             <div class="project-img-wrapper">
-              <img
-                class="project-img"
-                src="../img/projects/mobile/pet-love-mb-1x.jpg"
-                srcset="
-                  ../img/projects/mobile/pet-love-mb-1x.jpg   375w,
-                  ../img/projects/mobile/pet-love-mb@2x.jpg   750w,
-                  ../img/projects/tablet/pet-love-tt-1x.jpg   768w,
-                  ../img/projects/tablet/pet-love-tt@2x.jpg  1536w,
+              <picture>
+                <source media="(min-width: 1440px)" srcset="
                   ../img/projects/desktop/pet-love-dt-1x.jpg 1440w,
-                  ../img/projects/desktop/pet-love-dt@2x.jpg 1440w
-                "
-                sizes="(max-width: 375px) 100vw,
-                       (max-width: 768px) 100vw,
-                       (max-width: 1440px) 50vw,
-                       33vw"
-                alt="Pet Love project"
-              />
+                  ../img/projects/desktop/pet-love-dt@2x.jpg 2880w">
+  
+                <source media="(min-width: 768px)" srcset="
+                  ../img/projects/tablet/pet-love-tt-1x.jpg 768w,
+                  ../img/projects/tablet/pet-love-tt@2x.jpg 1536w">
+                
+                <source media="(max-width: 767px)" srcset="
+                  ../img/projects/mobile/pet-love-mb-1x.jpg 375w,
+                  ../img/projects/mobile/pet-love-mb@2x.jpg 750w">
+              
+                <img class="project-img"
+                     src="../img/projects/mobile/pet-love-mb-1x.jpg"
+                     alt="Pet Love project">
+              </picture>
             </div>
           </div>
         </div>
@@ -92,23 +92,23 @@
               <button type="button" class="project-btn">See project</button>
             </div>
             <div class="project-img-wrapper">
-              <img
-                class="project-img"
-                src="../img/projects/mobile/vocab-builder-mb-1x.jpg"
-                srcset="
-                  ../img/projects/mobile/vocab-builder-mb-1x.jpg   375w,
-                  ../img/projects/mobile/vocab-builder-mb@2x.jpg   750w,
-                  ../img/projects/tablet/vocab-builder-tt-1x.jpg   768w,
-                  ../img/projects/tablet/vocab-builder-tt@2x.jpg  1536w,
+              <picture>
+                <source media="(min-width: 1440px)" srcset="
                   ../img/projects/desktop/vocab-builder-dt-1x.jpg 1440w,
-                  ../img/projects/desktop/vocab-builder-dt@2x.jpg 2880w
-                "
-                sizes="(max-width: 375px) 100vw,
-                       (max-width: 768px) 100vw,
-                       (max-width: 1440px) 50vw,
-                       33vw"
-                alt="Vocab Builder project"
-              />
+                  ../img/projects/desktop/vocab-builder-dt@2x.jpg 2880w">
+  
+                <source media="(min-width: 768px)" srcset="
+                  ../img/projects/tablet/vocab-builder-tt-1x.jpg 768w,
+                  ../img/projects/tabletvocab-builder-tt@2x.jpg 1536w">
+                
+                <source media="(max-width: 767px)" srcset="
+                  ../img/projects/mobile/vocab-builder-mb-1x.jpg 375w,
+                  ../img/projects/mobile/vocab-builder-mb@2x.jpg 750w">
+              
+                <img class="project-img"
+                     src="../img/projects/mobile/vocab-builder-mb-1x.jpg"
+                     alt="Vocab Builder project">
+              </picture>
             </div>
           </div>
         </div>
