--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -22,19 +22,19 @@
             <div class="project-img-wrapper">
               <picture>
                 <source media="(min-width: 1440px)" srcset="
-                  ../img/projects/desktop/read-journey-dt-1x.jpg 1440w,
-                  ../img/projects/desktop/read-journey-dt@2x.jpg 2880w">
+                  /projects/desktop/read-journey-dt-1x.jpg 1440w,
+                  /projects/desktop/read-journey-dt@2x.jpg 2880w">
   
                 <source media="(min-width: 768px)" srcset="
-                  ../img/projects/tablet/read-journey-tt-1x.jpg 768w,
-                  ../img/projects/tablet/read-journey-tt@2x.jpg 1536w">
+                  /projects/tablet/read-journey-tt-1x.jpg 768w,
+                  /projects/tablet/read-journey-tt@2x.jpg 1536w">
                 
                 <source media="(max-width: 767px)" srcset="
-                  ../img/projects/mobile/read-journey-mb-1x.jpg 375w,
-                  ../img/projects/mobile/read-journey-mb@2x.jpg 750w">
+                  /projects/mobile/read-journey-mb-1x.jpg 375w,
+                  /projects/mobile/read-journey-mb@2x.jpg 750w">
               
                 <img class="project-img"
-                     src="../img/projects/mobile/read-journey-mb-1x.jpg"
+                     src="projects/mobile/read-journey-mb-1x.jpg"
                      alt="Read journey project">
               </picture>
             </div>
@@ -58,19 +58,19 @@
             <div class="project-img-wrapper">
               <picture>
                 <source media="(min-width: 1440px)" srcset="
-                  ../img/projects/desktop/pet-love-dt-1x.jpg 1440w,
-                  ../img/projects/desktop/pet-love-dt@2x.jpg 2880w">
+                  /projects/desktop/pet-love-dt-1x.jpg 1440w,
+                  /projects/desktop/pet-love-dt@2x.jpg 2880w">
   
                 <source media="(min-width: 768px)" srcset="
-                  ../img/projects/tablet/pet-love-tt-1x.jpg 768w,
-                  ../img/projects/tablet/pet-love-tt@2x.jpg 1536w">
+                  /projects/tablet/pet-love-tt-1x.jpg 768w,
+                  /projects/tablet/pet-love-tt@2x.jpg 1536w">
                 
                 <source media="(max-width: 767px)" srcset="
-                  ../img/projects/mobile/pet-love-mb-1x.jpg 375w,
-                  ../img/projects/mobile/pet-love-mb@2x.jpg 750w">
+                  /projects/mobile/pet-love-mb-1x.jpg 375w,
+                  /projects/mobile/pet-love-mb@2x.jpg 750w">
               
                 <img class="project-img"
-                     src="../img/projects/mobile/pet-love-mb-1x.jpg"
+                     src="/projects/mobile/pet-love-mb-1x.jpg"
                      alt="Pet Love project">
               </picture>
             </div>
@@ -94,19 +94,19 @@
             <div class="project-img-wrapper">
               <picture>
                 <source media="(min-width: 1440px)" srcset="
-                  ../img/projects/desktop/vocab-builder-dt-1x.jpg 1440w,
-                  ../img/projects/desktop/vocab-builder-dt@2x.jpg 2880w">
+                  /projects/desktop/vocab-builder-dt-1x.jpg 1440w,
+                  /projects/desktop/vocab-builder-dt@2x.jpg 2880w">
   
                 <source media="(min-width: 768px)" srcset="
-                  ../img/projects/tablet/vocab-builder-tt-1x.jpg 768w,
-                  ../img/projects/tabletvocab-builder-tt@2x.jpg 1536w">
+                  /projects/tablet/vocab-builder-tt-1x.jpg 768w,
+                  /projects/tabletvocab-builder-tt@2x.jpg 1536w">
                 
                 <source media="(max-width: 767px)" srcset="
-                  ../img/projects/mobile/vocab-builder-mb-1x.jpg 375w,
-                  ../img/projects/mobile/vocab-builder-mb@2x.jpg 750w">
+                  /projects/mobile/vocab-builder-mb-1x.jpg 375w,
+                  /projects/mobile/vocab-builder-mb@2x.jpg 750w">
               
                 <img class="project-img"
-                     src="../img/projects/mobile/vocab-builder-mb-1x.jpg"
+                     src="/projects/mobile/vocab-builder-mb-1x.jpg"
                      alt="Vocab Builder project">
               </picture>
             </div>
