--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -100,10 +100,9 @@
     </div>
     <div class="skills-container" id="prevArrow">
       <div class="skill">
-        <ul class="swiper-wrapper">
+        <ul class="swiper-wrapper swiper-skill">
           <li class="skill-item swiper-slide">HTML/CSS</li>
           <li class="skill-item swiper-slide">JavaScript</li>
-          <li class="skill-item swiper-slide">TypeScript</li>
           <li class="skill-item swiper-slide">React</li>
           <li class="skill-item swiper-slide">Node.js</li>
           <li class="skill-item swiper-slide">React Native</li>
