--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -11,7 +11,7 @@
         </button>
         <button class="swiper-button-next arrow">
           <svg width="24" height="24">
-            <use href="../public/symbol-defs.svg#icon-new-right"></use>
+            <use href="../public/symbol-defs.svg#icon-arrow-right"></use>
           </svg>
         </button>
       </div>
