--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -92,42 +92,19 @@
   margin-bottom: 32px;
 }
 
-.swiper-button-prev,
-.swiper-button-next {
+.btn-svg {
+  fill: none;
+  stroke: var(--main-color);
   display: flex;
   justify-content: center;
   align-items: center;
   width: 52px;
   height: 52px;
-  background: transparent;
   border: 1px solid rgba(250, 250, 250, 0.7);
   border-radius: 50%;
   cursor: pointer;
   transition: background 0.3s ease;
 }
-
-.swiper-button-prev svg,
-.swiper-button-next svg {
-  fill: var(--main-color);
-  width: 24px;
-  height: 24px;
-}
-
-.swiper-button-prev:hover,
-.swiper-button-next:hover {
-  background: rgba(255, 255, 255, 0.1);
-}
-
-.swiper-button-disabled {
-  opacity: 0.5;
-  pointer-events: none;
-  fill: var(--swiper-btn-disabled);
-}
-
-.swiper-button-disabled svg {
-  fill: var(--swiper-btn-disabled);
-}
-
 
 
 @media screen and (min-width: 768px) {
