--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -115,12 +115,12 @@
       </div>
       <!-- Navigation buttons -->
       <div class="slider-navigation">
-        <div class="swiper-button-prev" aria-label="Previous slide">
+        <div class="swiper-button-prev btn-svg" aria-label="Previous slide">
           <svg class="btn-arrow" width="24" height="24">
             <use href="/symbol-defs.svg#icon-left"></use>
           </svg>
         </div>
-        <div class="swiper-button-next" aria-label="Next slide">
+        <div class="swiper-button-next btn-svg" aria-label="Next slide">
           <svg class="btn-arrow" width="24" height="24">
             <use href="/symbol-defs.svg#icon-right"></use>
           </svg>
