--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -59,8 +59,11 @@ p {
 
 .swiper-button-prev.arrow,
 .swiper-button-next.arrow{
-    width: 68px;
-    height: 68px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 52px;
+    height: 52px;
     background: transparent;
     border: 1px solid rgba(250, 250, 250, 0.7);
     border-radius: 50%;
@@ -103,6 +106,12 @@ p {
     .reviews-section {
         margin-top: 96px;
         margin-bottom: 96px;
+    }
+
+    .swiper-button-prev.arrow,
+    .swiper-button-next.arrow {
+        width: 68px;
+        height: 68px;
     }
 }
 
