--- a/src/css/about-me-intro.css
+++ b/src/css/about-me-intro.css
@@ -9,7 +9,7 @@
 
 .intro-text-cover {
     border-radius: 24px;
-    width: 343px;
+    min-width: 320px;
     height: 500px;
     background: var(--cards);
 }
@@ -34,7 +34,7 @@
 }
 
 .about-me-introduction {
-    margin-bottom: 32px;
+    padding-bottom: 32px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -52,7 +52,7 @@
     }
 
     .about-me-introduction {
-        margin-bottom: 64px;
+        padding-bottom: 64px;
     }
 }
 
@@ -68,6 +68,6 @@
     }
 
     .about-me-introduction {
-        margin-bottom: 96px;
+        padding-bottom: 96px;
     }
 }
