--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -109,7 +109,7 @@
 
 @media screen and (min-width: 768px) {
   .slider-navigation {
-    padding: 64px 0;
+    margin: 64px 0 0;
   }
 
   .project-content {
