--- a/src/css/header.css
+++ b/src/css/header.css
@@ -156,7 +156,7 @@
   width: 100%;
   height: 100%;
 
-  background-image: url(../img/hero/hero.png);
+  background-image: url(./img/hero/hero.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
