--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,12 +4,12 @@
       <a class="header-logo-link" href="../index.html">
         <picture>
           <source
-            srcset="../img/logo/logo@2x.png"
+            srcset="./img/logo/logo@2x.png"
             media="(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)"
           />
           <img
             class="header-logo-image"
-            src="../img/logo/logo.png"
+            src="./img/logo/logo.png"
             alt="Jefferson logo"
             width="80"
             height="80"
@@ -40,7 +40,7 @@
 
       <button class="burger-menu-button">
         <svg class="burger-menu-icon" height="28" width="28">
-          <use href="../img/icons.svg##icon-btn-menu"></use>
+          <use href="./img/icons.svg##icon-btn-menu"></use>
         </svg>
       </button>
 
@@ -48,7 +48,7 @@
         <div class="container mobile-menu-wrap">
           <button class="menu-close-button">
             <svg class="menu-close-icon" height="28" width="28">
-              <use href="../img/icons.svg#icon-btn-close"></use>
+              <use href="./img/icons.svg#icon-btn-close"></use>
             </svg>
           </button>
 
