--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -99,15 +99,35 @@
   border-radius: 60px;
   height: 37px;
 
-  color: var(--color-text);
+  color: var(--main-color);
   background-color: transparent;
 
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.hero-social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 27.5px;
+  width: 100%;
+  height: 100%;
+  font-family: var(--main-font);
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: -0.02em;
+  color: var(--main-color);
+}
+
+.hero-social-item:nth-child(5) > .hero-social-link {
+  padding-right: 110px;
+  padding-left: 110px;
+}
+
 .hero-social-item:hover,
 .hero-social-item:active {
-  border-color: var(--color-text);
+  border-color: var(--main-color);
 }
 
 @media only screen and (min-width: 768px) {
