‘fix-mentor-comments’

--- a/src/partials/work-together.html
+++ b/src/partials/work-together.html
@@ -1,4 +1,5 @@
 <footer class="work_together" id="work-together">
+  <h3 class="visually-hidden">Work together</h3>
   <div class="work_together_background_image">
     <div class="work_together_container container">
       <div class="work_together_wrap">
@@ -6,27 +7,26 @@
           <picture>
             <source
               srcset="
-                /img/work-together-img/foto-70x70px-1x.jpg 1x,
-                /img/work-together-img/foto-70x70px-2x.jpg 2x
+                ./img/work-together-img/foto-70x70px-1x.jpg 1x,
+                ./img/work-together-img/foto-70x70px-2x.jpg 2x
               "
               type="image/jpeg"
               media="(min-width: 768px)"
             />
             <source
               srcset="
-                /img/work-together-img/foto-44x44px-1x.jpg 1x,
-                /img/work-together-img/foto-44x44px-2x.jpg 2x
+                ./img/work-together-img/foto-44x44px-1x.jpg 1x,
+                ./img/work-together-img/foto-44x44px-2x.jpg 2x
               "
               type="image/jpeg"
               media="(max-width: 375px)"
             />
             <img
-              src="/img/work-together-img/foto-44x44px-1x.jpg"
+              src="./img/work-together-img/foto-44x44px-1x.jpg"
               class="work_together_logo"
               alt="foto"
             />
           </picture>
-
           <h2 class="work_together_wrap_logo_text">
             Let&#8217;s&#32;<span>&#119;&#111;&#114;&#107;</span>
           </h2>
@@ -35,7 +35,6 @@
           <h2 class="work_together_wrap_logo_text">together</h2>
         </div>
       </div>
-
       <form class="work_together_form" id="work_together_form">
         <div class="work_together_wrap_form">
           <div>
@@ -90,7 +89,6 @@
           Send
         </button>
       </form>
-
       <address class="work_together_address">
         <ul class="work_together_address_list">
           <li class="work_together_address_item">
@@ -109,7 +107,6 @@
       </address>
     </div>
   </div>
-
   <div
     class="work_together_backdrop"
     id="together_backdrop_modal_backdrop"
@@ -121,10 +118,9 @@
         data-modal-close
         type="button"
       >
-        A
-        <!-- <svg class="work_together_modal_close_icon" width="22" height="22">
-          <use href="#"></use>
-        </svg> -->
+        <svg class="work_together_modal_close_icon" width="22" height="22">
+          <use href="./symbol-defs.svg#icon-btn-clone"></use>
+        </svg>
       </button>
       <div class="work_together_modal_wrap_messages">
         <h5
