--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -5,7 +5,7 @@
             <h3 class="faq-question">What programming languages are most often used in your project?
                 <span class="section-svg">
                     <svg class="arrow-icon" width="20" height="20">
-                        <use href="../public/symbol-defs.svg#icon-aboutme"></use>
+                        <use href="./symbol-defs.svg#icon-aboutme"></use>
                     </svg>
                 </span>
             </h3>
