--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -16,7 +16,7 @@
             <h3 class="faq-question">What are the deadlines for the project?
                 <span class="section-svg">
                     <svg class="arrow-icon" width="20" height="20">
-                        <use href="../public/symbol-defs.svg#icon-aboutme"></use>
+                        <use href="./symbol-defs.svg#icon-arrow-top"></use>
                     </svg>
                 </span>
             </h3>
