--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -39,7 +39,7 @@
       </nav>
 
       <button class="burger-menu-button">
-          <use href="./symbol-desf.svg#icon-btn-menu"></use>
+          <use href="./symbol-defs.svg#icon-btn-clone"></use>
         </svg>
       </button>
 
