--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -100,7 +100,7 @@
     </div>
     <div class="skills-container" id="prevArrow">
       <div class="skill">
-        <ul class="swiper-wrapper">
+        <ul class="swiper-wrapper swiper-skill">
           <li class="skill-item swiper-slide">HTML/CSS</li>
           <li class="skill-item swiper-slide">JavaScript</li>
           <li class="skill-item swiper-slide">TypeScript</li>
