--- a/src/css/about-me.css
+++ b/src/css/about-me.css
@@ -1,9 +1,9 @@
 .about-me {
-    margin-bottom: 64px;
+    padding-bottom: 64px;
 }
 
 .about-div {
-    padding-bottom: 32px;
+    margin-bottom: 32px;
 }
 
 .accordion-block .ac-trigger .icon {
@@ -96,7 +96,7 @@
     margin: 0;
 }
 
-.skill {
+.skill  {
     position: relative;
     overflow: hidden;
     max-width: 260px;
@@ -104,7 +104,7 @@
     margin: 0;    
 }
 
-.swiper-wrapper {
+.swiper-skill{
     display: flex;
     transition: transform 0.3s ease;
     width: 100%;
@@ -115,7 +115,8 @@
 }
 
 .skill-item.swiper-slide {
-    width: 50%;
+    width: 130px;
+    height: 130px;
     flex-shrink: 0;
     display: flex;
     justify-content: center;
@@ -126,7 +127,6 @@
     letter-spacing: -0.02em;
     color: #fafafa;
     aspect-ratio: 1 / 1;
-    width: clamp(80px, 20vw, 200px);
     border-radius: 50%;
     border: 1px solid rgba(250, 250, 250, 0.2);
     text-align: center;
@@ -145,8 +145,11 @@
 
 
 @media only screen and (min-width: 768px) {
-    .about-div {
-        margin-bottom: 96px;
+    .about-me {
+        padding-bottom: 96px;
+    }
+    .about-div{
+        margin-bottom: 64px;
     }
     
     .accordion-block .ac:not(:first-child) {
@@ -168,16 +171,16 @@
     .skills-container {
         max-width: 704px;
         gap: 64px;
-        padding-bottom: 96px;
     }
     
-   .swiper-wrapper {
+   .swiper-skill {
         margin-bottom: 0;
     }
     
     .skill-item.swiper-slide {
-        height: 100%;
+        height: 200px;
         font-size: 20px;
+        width: 200px;
     }
     
     .btn-next {
@@ -189,7 +192,7 @@
 
 @media only screen and (min-width: 1440px) {
     .about-me{
-        padding-bottom: 100px;
+        padding-bottom: 196px;
     }
 
     .accordion-block .ac .ac-panel .ac-text {
@@ -199,14 +202,13 @@
     .accordion-block .ac-text .ac-list:not(:last-child) {
         margin-bottom: 32px;
     }
-    .about-ac{
-        padding-bottom: 96px;
+    .about-div{
+        margin-bottom: 96px;
     }
 
     .skills-container {
         min-width: 1312px;
         gap: 72px;
-        padding: 0;
         margin: 0 auto;
     }
     
