about corect swiper

--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -107,6 +107,12 @@
           <li class="skill-item swiper-slide">Node.js</li>
           <li class="skill-item swiper-slide">React Native</li>
           <li class="skill-item swiper-slide">Soft skills</li>
+          <li class="skill-item swiper-slide">HTML/CSS</li>
+          <li class="skill-item swiper-slide">JavaScript</li>
+          <li class="skill-item swiper-slide">React</li>
+          <li class="skill-item swiper-slide">Node.js</li>
+          <li class="skill-item swiper-slide">React Native</li>
+          <li class="skill-item swiper-slide">Soft skills</li>
         </ul>
       </div>
       <svg class="btn-next" width="28" height="28">
