--- a/src/css/benefits.css
+++ b/src/css/benefits.css
@@ -66,7 +66,6 @@
     color: var(--main-color);
     background-color: transparent;
     margin-top: 32px;
-    margin-bottom: 64px;
     cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -75,10 +74,17 @@
     background-color: var(--accent-color-hover);
 }
 
+.benefits {
+    padding-bottom: 64px;
+}
+
 @media screen and (min-width: 768px) {
     .benefits-button {
         margin-top: 64px;
-        margin-bottom: 96px;
+    }
+
+    .benefits {
+        padding-bottom: 96px;
     }
 }
 
@@ -103,7 +109,7 @@
         margin-bottom: 0px;
     }
 
-    .benefits-button {
-        margin-bottom: 164px;
+    .benefits {
+        padding-bottom: 164px;
     }
 }
