--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,6 +1,6 @@
 .hero-section {
   position: relative;
-  background-image: url('../img/hero/hero.png');
+  background-image: url('/img/hero/hero.png');
   margin: 0 auto;
 
   margin-bottom: 62px;
@@ -14,7 +14,7 @@
 @media only screen and (min-resolution: 192dpi),
   only screen and (min-resolution: 2dppx) {
   .hero-section {
-    background-image: url('../img/hero/hero@2x.png');
+    background-image: url('/img/hero/hero@2x.png');
   }
 }
 
@@ -51,7 +51,6 @@
 @media only screen and (min-width: 768px) {
   .hero-title {
     font-size: 90px;
-
     padding-top: 300px;
     margin-bottom: 187px;
   }
@@ -98,21 +97,15 @@
   border: 1px solid rgba(250, 250, 250, 0.2);
   border-radius: 60px;
   height: 37px;
-
+  min-width: 37px;
   color: var(--main-color);
   background-color: transparent;
-
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-social-link {
   display: flex;
-  justify-content: center;
   align-items: center;
-
-  padding: 27.5px;
-  width: 100%;
-  height: 100%;
   font-family: var(--main-font);
   font-weight: 500;
   font-size: 14px;
@@ -121,8 +114,17 @@
 }
 
 .hero-social-item:nth-child(5) > .hero-social-link {
-  padding-right: 110px;
-  padding-left: 110px;
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 12px;
+}
+
+@media only screen and (max-width: 359px) {
+  .hero-title {
+    margin-bottom: 160px;
+  }
+  
 }
 
 .hero-social-item:hover,
@@ -133,57 +135,6 @@
 @media only screen and (min-width: 768px) {
   .hero-social-item {
     height: 55px;
-  }
-}
-
-.hero-social-item:nth-child(1) {
-  padding: 10px 12px;
-  width: 37px;
-}
-
-.hero-social-item:nth-child(2) {
-  padding: 10px;
-  width: 37px;
-}
-
-.hero-social-item:nth-child(3) {
-  padding: 10px 11px;
-  width: 37px;
-}
-
-.hero-social-item:nth-child(4) {
-  padding: 10px 8px;
-  width: 37px;
-}
-
-.hero-social-item:nth-child(5) {
-  padding: 10px 12px;
-  width: 178px;
-}
-
-@media only screen and (min-width: 768px) {
-  .hero-social-item:nth-child(1) {
-    padding: 18x 20px;
-    width: 55px;
-  }
-
-  .hero-social-item:nth-child(2) {
-    padding: 18px 17px;
-    width: 55px;
-  }
-
-  .hero-social-item:nth-child(3) {
-    padding: 18px;
-    width: 55px;
-  }
-
-  .hero-social-item:nth-child(4) {
-    padding: 18px 16px;
-    width: 55px;
-  }
-
-  .hero-social-item:nth-child(5) {
-    padding: 18px 24px;
-    width: 223px;
+    min-width: 55px;
   }
 }
