--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header-section">
   <div class="container">
     <div class="header-top-line">
-      <a class="header-logo-link" href="../index.html">
+      <a class="header-logo-link" href="/">
         <picture>
           <source
             srcset="./img/logo/logo@2x.png"
@@ -39,7 +39,8 @@
       </nav>
 
       <button class="burger-menu-button">
-          <use href="./symbol-defs.svg#icon-btn-clone"></use>
+        <svg class="burger-menu-icon" height="28" width="28">
+          <use href="./img/icons.svg#icon-btn-menu"></use>
         </svg>
       </button>
 
@@ -68,7 +69,7 @@
             </ul>
           </nav>
 
-          <a href="#" class="menu-order-button">Order the project</a>
+          <a href="#work-together" class="menu-order-button">Order the project</a>
         </div>
       </div>
 
