--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -21,7 +21,7 @@
         <a class="hero-social-link" href="https://www.youtube.com/c/GoIT">YT</a>
       </li>
       <li class="hero-social-item">
-        <a class="hero-social-link" href="">GH</a>
+        <a class="hero-social-link" href="https://github.com/Bohdan-Potopliak/free-azov">GH</a>
       </li>
       <li class="hero-social-item">
         <a class="hero-social-link" href="mailto:lloydjefferson@gmail.com"
