--- a/src/css/about-me-intro.css
+++ b/src/css/about-me-intro.css
@@ -9,7 +9,7 @@
 
 .intro-text-cover {
     border-radius: 24px;
-    min-width: 320px;
+    /* min-width: 320px; */
     height: 500px;
     background: var(--cards);
 }
