--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -64,7 +64,7 @@
                 <a class="mobile-menu-link" href="#projects">Projects</a>
               </li>
               <li class="mobile-menu-item">
-                <a class="mobile-menu-link" href="#FAQ">FAQ</a>
+                <a class="mobile-menu-link" href="#faq">FAQ</a>
               </li>
             </ul>
           </nav>
