--- a/src/css/faq.css
+++ b/src/css/faq.css
@@ -144,8 +144,26 @@
         position: relative;
     }
 
+    .faq-question-txt{
+        font-family: var(--font-family);
+font-weight: 600;
+font-size: 20px;
+line-height: 1.5;
+letter-spacing: -0.02em;
+color: var(--main-text);
+    }
+
+    .faq-item:last-child .faq-question-txt {
+        max-width: 460px;
+    } 
+    
+
     .faq-question {
         font-size: 24px;
+    }
+
+    .faq-item:nth-child(-n+3) .faq-question {
+        padding-right: 32px;
     }
 
     .faq-answer {
