--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -23,16 +23,19 @@
               <picture>
                 <source media="(min-width: 1440px)" srcset="
                   /projects/desktop/read-journey-dt-1x.jpg 1440w,
-                  /projects/desktop/read-journey-dt@2x.jpg 2880w">
+                  /projects/desktop/read-journey-dt@2x.jpg 2880w"
+                  sizes="(min-width: 1440px) 50vw">
   
                 <source media="(min-width: 768px)" srcset="
                   /projects/tablet/read-journey-tt-1x.jpg 768w,
-                  /projects/tablet/read-journey-tt@2x.jpg 1536w">
+                  /projects/tablet/read-journey-tt@2x.jpg 1536w"
+                  sizes="(min-width: 768px) 75vw">
                 
                 <source media="(max-width: 767px)" srcset="
                   /projects/mobile/read-journey-mb-1x.jpg 375w,
-                  /projects/mobile/read-journey-mb@2x.jpg 750w">
-              
+                  /projects/mobile/read-journey-mb@2x.jpg 750w"
+                  sizes="(max-width: 767px) 100vw">
+                
                 <img class="project-img"
                      src="projects/mobile/read-journey-mb-1x.jpg"
                      alt="Read journey project">
@@ -59,16 +62,19 @@
               <picture>
                 <source media="(min-width: 1440px)" srcset="
                   /projects/desktop/pet-love-dt-1x.jpg 1440w,
-                  /projects/desktop/pet-love-dt@2x.jpg 2880w">
+                  /projects/desktop/pet-love-dt@2x.jpg 2880w"
+                  sizes="(min-width: 1440px) 50vw">
   
                 <source media="(min-width: 768px)" srcset="
                   /projects/tablet/pet-love-tt-1x.jpg 768w,
-                  /projects/tablet/pet-love-tt@2x.jpg 1536w">
+                  /projects/tablet/pet-love-tt@2x.jpg 1536w"
+                  sizes="(min-width: 768px) 75vw">
                 
                 <source media="(max-width: 767px)" srcset="
                   /projects/mobile/pet-love-mb-1x.jpg 375w,
-                  /projects/mobile/pet-love-mb@2x.jpg 750w">
-              
+                  /projects/mobile/pet-love-mb@2x.jpg 750w"
+                  sizes="(max-width: 767px) 100vw">
+                
                 <img class="project-img"
                      src="/projects/mobile/pet-love-mb-1x.jpg"
                      alt="Pet Love project">
@@ -95,16 +101,19 @@
               <picture>
                 <source media="(min-width: 1440px)" srcset="
                   /projects/desktop/vocab-builder-dt-1x.jpg 1440w,
-                  /projects/desktop/vocab-builder-dt@2x.jpg 2880w">
+                  /projects/desktop/vocab-builder-dt@2x.jpg 2880w"
+                  sizes="(min-width: 1440px) 50vw">
   
                 <source media="(min-width: 768px)" srcset="
                   /projects/tablet/vocab-builder-tt-1x.jpg 768w,
-                  /projects/tablet/vocab-builder-tt@2x.jpg 1536w">
+                  /projects/tablet/vocab-builder-tt@2x.jpg 1536w"
+                  sizes="(min-width: 768px) 75vw">
                 
                 <source media="(max-width: 767px)" srcset="
                   /projects/mobile/vocab-builder-mb-1x.jpg 375w,
-                  /projects/mobile/vocab-builder-mb@2x.jpg 750w">
-              
+                  /projects/mobile/vocab-builder-mb@2x.jpg 750w"
+                  sizes="(max-width: 767px) 100vw">
+                
                 <img class="project-img"
                      src="/projects/mobile/vocab-builder-mb-1x.jpg"
                      alt="Vocab Builder project">
