--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -88,8 +88,7 @@
   gap: 12px;
   justify-content: center;
   align-items: center;
-  padding-top: 32px;
-  padding-bottom: 64px;
+  margin: 32px 0 64px;
 }
 
 .btn-svg {
@@ -106,11 +105,14 @@
   transition: background 0.3s ease;
 }
 
+.swiper-button-next,
+.swiper-button-prev {
+    outline: none;
+}
 
 @media screen and (min-width: 768px) {
   .slider-navigation {
-    padding-top: 64px;
-    padding-bottom: 96px;
+    margin: 64px 0 96px;
   }
 
   .project-content {
@@ -159,7 +161,7 @@
 
 @media only screen and (min-width: 1440px) {
   .slider-navigation {
-    padding-bottom: 164px;
+    margin-bottom: 164px;
   }
 
   .tags-list {
