--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -20,7 +20,7 @@
                     </svg>
                 </span>
             </h3>
-            <div class="faq-answer"><p class="faq-answer">The terms of project implementation depend to a large extent on a number of factors, such as
+            <div class="faq-div"><p class="faq-answer">The terms of project implementation depend to a large extent on a number of factors, such as
                 the scope of the project, its complexity, and the availability of resources. Determining exact deadlines is a
                 difficult task, and it usually occurs during the planning phase of the project.</p></div>
         </li>
@@ -32,7 +32,7 @@
                     </svg>
                 </span>
             </h3>
-            <div class="faq-answer"><p class="faq-answer">Payment through credit and debit cards such as Visa, MasterCard, specialized electronic
+            <div class="faq-div"><p class="faq-answer">Payment through credit and debit cards such as Visa, MasterCard, specialized electronic
                 payment systems such as PayPal, as well as payments in cryptocurrencies such as Bitcoin, Ethereum and others.</p>
             </div>
         </li>
@@ -44,7 +44,7 @@
                     </svg>
                 </span>
             </h3>
-            <div class="faq-answer"><p class="faq-answer">In the field of web development, there are various technologies and programming languages.
+            <div class="faq-div"><p class="faq-answer">In the field of web development, there are various technologies and programming languages.
                 Typically, this includes a combination of frontend (client side) and backend (server side) languages.</p></div>
         </li>
         <li class="faq-item">
@@ -55,7 +55,7 @@
                     </svg>
                 </span>
             </h3>
-            <div class="faq-answer"><p class="faq-answer">The terms of project implementation depend to a large extent on a number of factors, such as
+            <div class="faq-div"><p class="faq-answer">The terms of project implementation depend to a large extent on a number of factors, such as
                 the scope of the project, its complexity, and the availability of resources. Determining exact deadlines is a
                 difficult task, and it usually occurs during the planning phase of the project.</p></div>
         </li>
@@ -68,7 +68,7 @@
                     </svg>
                 </span>
             </h3>
-            <div class="faq-answer"><p class="faq-answer">Payment through credit and debit cards such as Visa, MasterCard, specialized electronic
+            <div class="faq-div"><p class="faq-answer">Payment through credit and debit cards such as Visa, MasterCard, specialized electronic
                 payment systems such as PayPal, as well as payments in cryptocurrencies such as Bitcoin, Ethereum and others.</p>
             </div>
         </li>
