--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -3,7 +3,8 @@
   background-image: url('./img/hero/hero.png');
   margin: 0 auto;
 
-  margin-bottom: 62px;
+  padding-top: 281px;
+  padding-bottom: 64px;
 
   background-repeat: no-repeat;
   background-position: center;
@@ -20,14 +21,15 @@
 
 @media only screen and (min-width: 768px) {
   .hero-section {
-    margin-bottom: 64px;
+    padding-top: 300px;
+    padding-bottom: 64px;
     height: 1024px;
   }
 }
 
 @media only screen and (min-width: 1440px) {
   .hero-section {
-    margin-bottom: 96px;
+    padding-bottom: 96px;
     height: 900px;
   }
 }
@@ -36,7 +38,6 @@
   display: flex;
   justify-content: flex-start;
 
-  padding-top: 281px;
   margin-bottom: 212px;
 
   font-family: var(--main-font);
@@ -52,7 +53,6 @@
   .hero-title {
     font-size: 90px;
 
-    padding-top: 300px;
     margin-bottom: 187px;
   }
 }
@@ -110,7 +110,7 @@
   justify-content: center;
   align-items: center;
 
-  padding: 27.5px;
+  padding: 18.5px;
   width: 100%;
   height: 100%;
   font-family: var(--main-font);
@@ -120,19 +120,23 @@
   color: var(--main-color);
 }
 
-.hero-social-item:nth-child(5) > .hero-social-link {
-  padding-right: 110px;
-  padding-left: 110px;
-}
-
 .hero-social-item:hover,
 .hero-social-item:active {
   border-color: var(--main-color);
 }
 
 @media only screen and (min-width: 768px) {
+  .hero-social-link {
+    padding: 27.5px;
+  }
+
   .hero-social-item {
     height: 55px;
+  }
+
+  .hero-social-item:nth-child(5) > .hero-social-link {
+    padding-right: 110px;
+    padding-left: 110px;
   }
 }
 
