--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -2,7 +2,7 @@
     <h2 class="faq-title">FAQ</h2>
     <ul class="faq-list">
         <li class="faq-item">
-            <h3 class="faq-question"><p class="faq-question-txt">What programming languages are most often used in your project?</p>
+            <h3 class="faq-question"><span class="faq-question-txt">What programming languages are most often used in your project?</span>
                 <span class="section-svg">
                     <svg class="arrow-icon" width="20" height="20">
                         <use href="./symbol-defs.svg#icon-aboutme"></use>
@@ -13,7 +13,7 @@
                 Typically, this includes a combination of frontend (client side) and backend (server side) languages.</p></div>
         </li>
         <li class="faq-item">
-            <h3 class="faq-question"><p class="faq-question-txt">What are the deadlines for the project?</p>
+            <h3 class="faq-question"><span class="faq-question-txt">What are the deadlines for the project?</span>
                 <span class="section-svg">
                     <svg class="arrow-icon" width="20" height="20">
                         <use href="./symbol-defs.svg#icon-aboutme"></use>
@@ -25,7 +25,7 @@
                 difficult task, and it usually occurs during the planning phase of the project.</p></div>
         </li>
         <li class="faq-item">
-            <h3 class="faq-question"><p class="faq-question-txt">What payment methods do you accept?</p>
+            <h3 class="faq-question"><span class="faq-question-txt">What payment methods do you accept?</span>
                 <span class="section-svg">
                     <svg class="arrow-icon" width="20" height="20">
                         <use href="./symbol-defs.svg#icon-aboutme"></use>
@@ -37,7 +37,7 @@
             </div>
         </li>
         <li class="faq-item">
-            <h3 class="faq-question"><p class="faq-question-txt">How can I contact you?</p>
+            <h3 class="faq-question"><span class="faq-question-txt">How can I contact you?</span>
                 <span class="section-svg">
                     <svg class="arrow-icon" width="20" height="20">
                         <use href="./symbol-defs.svg#icon-aboutme"></use>
@@ -48,7 +48,7 @@
                 Typically, this includes a combination of frontend (client side) and backend (server side) languages.</p></div>
         </li>
         <li class="faq-item">
-            <h3 class="faq-question"><p class="faq-question-txt">Do you provide advice or support?</p>
+            <h3 class="faq-question"><span class="faq-question-txt">Do you provide advice or support?</span>
                 <span class="section-svg">
                     <svg class="arrow-icon" width="20" height="20">
                         <use href="./symbol-defs.svg#icon-aboutme"></use>
@@ -60,8 +60,8 @@
                 difficult task, and it usually occurs during the planning phase of the project.</p></div>
         </li>
         <li class="faq-item">
-            <h3 class="faq-question"><p class="faq-question-txt">What does the process of developing a software product look like from idea to
-                implementation?</p>
+            <h3 class="faq-question"><span class="faq-question-txt">What does the process of developing a software product look like from idea to
+                implementation?</span>
                 <span class="section-svg">
                     <svg class="arrow-icon" width="20" height="20">
                         <use href="./symbol-defs.svg#icon-aboutme"></use>
