--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,5 +1,5 @@
-<section id="reviews" class="reviews-section">
-  <div class="container">
+<section id="reviews">
+  <div class="container reviews-section">
     <h3 class="common-section-title">REVIEWS</h3>
     <div class="cards-and-arrows swiper swiper-reviews">
       <ul class="cards swiper-wrapper"></ul>
