--- a/src/css/faq.css
+++ b/src/css/faq.css
@@ -1,5 +1,5 @@
 .faq-section{
-    margin-bottom: 64px;
+    padding-bottom: 64px;
 }
 
 .faq-title {
@@ -88,7 +88,7 @@
 
 @media (min-width: 768px){
     .faq-section{
-        margin-bottom: 94px;
+        padding-bottom: 94px;
     }
 
     .faq-item{
@@ -110,7 +110,7 @@
 
 @media (min-width: 1440px) {
     .faq-section {
-        margin-bottom: 164px;
+        padding-bottom: 164px;
     }
     
     .faq-list {
