--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -1,7 +1,7 @@
 
 .covers-section {
     position: relative;
-    margin: 0 0 64px 0;
+    /* margin: 0 0 64px 0; */
     background-color: #1C1D20;
 }
 
