--- a/src/partials/about-me-introduction.html
+++ b/src/partials/about-me-introduction.html
@@ -1,4 +1,4 @@
-<section>
+<section class="section-intro">
     <div class="container about-me-introduction">
         <div class="intro-text-cover">
             <h2 class="intro-description">I work with people all over the world to create impressive and <span class="intro-red-accent">functional</span> <span class="intro-grey-accent">websites</span> that reflect each client's unique personality.</h2>
