--- a/src/css/header.css
+++ b/src/css/header.css
@@ -12,7 +12,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  margin-top: 32px;
+  padding-top: 32px;
 }
 
 .header-logo-link {
@@ -156,7 +156,7 @@
   width: 100%;
   height: 100%;
 
-  background-image: url("/img/hero/hero.png");
+  background-image: url('/img/hero/hero.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
