--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -1,4 +1,5 @@
-<section id="faq" class="faq-section container">
+<section id="faq" class="faq-section">
+    <div class="container">
     <h2 class="faq-title">FAQ</h2>
     <ul class="faq-list">
         <li class="faq-item">
@@ -73,4 +74,5 @@
             </div>
         </li>
     </ul>
+</div>
 </section>
