--- a/src/partials/work-together.html
+++ b/src/partials/work-together.html
@@ -1,8 +1,7 @@
 <footer class="work_together work_together_container" id="work-together">
   <h3 class="visually-hidden">Work together</h3>
-  <div
-    class="work_together_background_image container work_together_container_desk"
-  >
+
+  <div class="container work_together_container_desk">
     <div class="work_together_wrap">
       <div class="work_together_wrap_picture">
         <picture>
@@ -106,34 +105,34 @@
       </ul>
     </address>
   </div>
+</footer>
 
-  <div
-    class="work_together_backdrop"
-    id="together_backdrop_modal_backdrop"
-    data-modal-messages
-  >
-    <div class="work_together_modal">
-      <button
-        class="work_together_modal_close_btn"
-        data-modal-close
-        type="button"
-      >
-        <svg class="work_together_modal_close_icon" width="22" height="22">
-          <use href="./symbol-defs.svg#icon-btn-clone"></use>
-        </svg>
-      </button>
-      <div class="work_together_modal_wrap_messages">
-        <h5
-          data-modal-title
-          class="work_together_modal_title common-headers"
-          id="work_together_title"
-        ></h5>
-        <p
-          data-modal-message
-          class="work_together_modal_text common-text"
-          id="work_together_text"
-        ></p>
-      </div>
+<div
+  class="work_together_backdrop"
+  id="together_backdrop_modal_backdrop"
+  data-modal-messages
+>
+  <div class="work_together_modal">
+    <button
+      class="work_together_modal_close_btn"
+      data-modal-close
+      type="button"
+    >
+      <svg class="work_together_modal_close_icon" width="22" height="22">
+        <use href="./symbol-defs.svg#icon-btn-clone"></use>
+      </svg>
+    </button>
+    <div class="work_together_modal_wrap_messages">
+      <h5
+        data-modal-title
+        class="work_together_modal_title common-headers"
+        id="work_together_title"
+      ></h5>
+      <p
+        data-modal-message
+        class="work_together_modal_text common-text"
+        id="work_together_text"
+      ></p>
     </div>
   </div>
-</footer>
+</div>
