--- a/src/css/work-together.css
+++ b/src/css/work-together.css
@@ -2,7 +2,7 @@
   position: relative;
   overflow: hidden;
 }
-.work_together_container {
+work_together_backdrop .work_together_container {
   padding-top: 32px;
   padding-bottom: 42px;
 }
@@ -184,19 +184,21 @@
 .work_together_address_link:active {
   border: 1px solid #fafafa;
 }
+/*!============== =============================== */
 
 .work_together_backdrop {
   width: 100%;
   height: 100%;
   top: 0;
+  position: fixed;
   background-color: rgba(15, 15, 16, 0.6);
   opacity: 0;
   visibility: hidden;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding: 138px 16px;
-  position: absolute;
   z-index: 1;
+
+  /* padding: 138px 16px; */
 }
 
 .is-open {
@@ -207,10 +209,15 @@
 
 .work_together_modal {
   z-index: 2;
-  position: relative;
   border-radius: 20px;
   border: 1px solid rgba(250, 250, 250, 0.1);
   background-color: var(--main-background-color);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 343px;
+  padding: 64px 32px 64px 32px;
 }
 
 .work_together_modal_close_btn {
@@ -225,17 +232,11 @@
   background-color: initial;
 }
 
-.work_together_modal_wrap_messages {
-  padding: 64px 32px 64px 32px;
-  /* width: 343px; */
-  max-width: 343px;
-  margin: 0 auto;
-}
-
 .work_together_modal_title,
 .work_together_modal_text {
   text-align: center;
 }
+
 .work_together_modal_title {
   margin-bottom: 16px;
 }
@@ -335,14 +336,9 @@
     padding: 18px 32px;
   }
 
-  .work_together_backdrop {
-    padding: 195px 138px;
-  }
-
-  .work_together_modal_wrap_messages {
+  .work_together_modal {
+    width: 493px;
     padding: 64px;
-    /* width: 492px; */
-    max-width: 492px;
   }
 }
 
@@ -358,10 +354,6 @@
 
   .work_together_wrap {
     margin-bottom: 18px;
-  }
-
-  .work_together_backdrop {
-    padding: 195px 474px;
   }
 
   .work_together_input_email {
