--- a/src/partials/work-together.html
+++ b/src/partials/work-together.html
@@ -111,12 +111,16 @@
   class="work_together_backdrop"
   id="together_backdrop_modal_backdrop"
   data-modal-messages
+  role="dialog"
+  aria-labelledby="work_together_title"
+  aria-describedby="work_together_text"
 >
   <div class="work_together_modal">
     <button
       class="work_together_modal_close_btn"
       data-modal-close
       type="button"
+      aria-label="Close modal"
     >
       <svg class="work_together_modal_close_icon" width="22" height="22">
         <use href="./symbol-defs.svg#icon-btn-clone"></use>
